--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,7 @@
   <%= form.text_field :name, required: true %><br>
   <%= form.label :email %>
   <%= form.text_field :email, required: true %><br>
+  <%= form.label :password_digest %>
+  <%= form.text_field :password_digest, required: true %><br>
   <%= form.submit "Create New User" %>
 <% end %>
