--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,14 @@
-<%= link_to "Log In", login_path, method: :get %>
-<%= button_to "Create New User", register_path, method: :get %>
+
+<% if current_user.nil? %>
+    <%= link_to "Log In", login_path, method: :get %>
+    <br>
+    <%= button_to "Create New User", register_path, method: :get %>
+<% else %>
+    <h3> Hi, <%= current_user.name %>! </h3>
+    <br>
+    <%= link_to "Log Out", logout_path %>
+<% end %>
+
 <section class='existing-users'>
     <p>Existing Users: </p>
     <% @users.each do |user| %>
